<resources>
    <string name="app_name">GeoQuizz</string>
    <string name="game1">Jeu Quizz</string>
    <string name="game2">Jeu Carte</string>
    <string name="quit">Quitter</string>
    <string name="quizzGame">Jeu Quizz</string>
    <string name="mapGame">Jeu Carte</string>
    <string name="startGame">Jouer</string>
    <string name="scoreGame">Meilleur score</string>
    <string name="playerLabel">Joueur</string>
    <string name="player">Pseudo</string>
    <string name="savePlayer">Ok</string>
    <string name="chooseQuizz">Choisir un quizz</string>
    <string name="questionsLink">Questions générales</string>
    <string name="picturesLink">Drapeaux</string>
    <string name="radioImage">Image1</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="image3">Image3</string>
    <string name="image4">Image4</string>
    <string name="scoreLabel">Score :</string>
    <string name="currentScore">Score : 0</string>
    <string name="questionLabel">Question : 1/x</string>
    <string name="currentQuestion">Question</string>
    <string name="answerGroup">Groupe d\'options</string>
    <string name="answerGroup1">Option 1</string>
    <string name="answerGroup2">Option 2</string>
    <string name="answerGroup3">Option 3</string>
    <string name="nextQuestion">Suivant</string>
    <string name="questPosition"> </string>
    <string name="distance">Distance : ...</string>
    <string name="valid">Valider </string>
    <string name="tests">Tester </string>
    <string name="finish">Fin</string>
    <string name="newQuestion">Nouveau</string>
    <string name="highScorePlayer">Joueur : </string>
    <string name="highScoreValue">Score : </string>
    <string name="highScoreDate">Date : </string>

</resources>
