<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".score2_Activity">
    <TextView
        style = "@style/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom = "100sp"
        android:text="@string/scoreGame" />
    <TextView
        android:id="@+id/highscorePlayer"
        style = "@style/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highScorePlayer" />
    <TextView
        android:id="@+id/highScoreValue"
        style = "@style/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highScoreValue" />
    <TextView
        android:id="@+id/highScoreDate"
        style = "@style/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highScoreDate" />
</LinearLayout>