<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questPosition"
            style="@style/labelGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/questPosition" />

        <Button
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textAllCaps="false"
            android:onClick="distance"
            android:text="@string/valid" />

        <TextView
            android:id="@+id/distance"
            style="@style/labelQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/distance" />

        <Button
            android:id="@+id/tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textAllCaps="false"
            android:onClick="tests"
            android:text="@string/tests" />

        <Button
            android:id="@+id/newQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textAllCaps="false"
            android:onClick="newQuestion"
            android:text="@string/newQuestion" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textAllCaps="false"
            android:onClick="finishMap"
            android:text="@string/finish" />

        <TextView
            android:id="@+id/currentScore"
            style = "@style/labelGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentScore" />
    </LinearLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapActivity"
        map:cameraZoom="6"/>
</LinearLayout>