<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".game2_Activity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="#008577"
        android:layout_marginBottom="100sp"
        android:text="@string/mapGame" />
    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:padding="20sp"
        android:text="@string/startGame"
        android:onClick="startGame"/>
    <Button
        android:id="@+id/scoreGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:padding="20sp"
        android:text="@string/scoreGame"
        android:onClick="highScore"/>
    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="20sp"
        android:text="@string/quit"
        android:onClick="quit"/>
</LinearLayout>