<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game1_Activity"
    android:background="#fce4ec"
    android:orientation="vertical">

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:onClick="startGame"
        />
    <Button
        android:id="@+id/scoreGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreGame"
        android:onClick="highScore"
       />
    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:onClick="quit"/>

</LinearLayout>