<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".questions_Activity">
    <TextView
        style = "@style/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom = "50sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/questionsLink"/>
    <TextView
        android:id="@+id/currentScore"
        style = "@style/labelGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/currentScore"/>
    <TextView
        android:id="@+id/questionLabel"
        style = "@style/labelGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/questionLabel" />

    <TextView
        android:id="@+id/currentQuestion"
        style = "@style/labelQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp" />
    <RadioGroup
        android:id="@+id/answerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/answerGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Option 1" />

        <RadioButton
            android:id="@+id/answerGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Option 2" />

        <RadioButton
            android:id="@+id/answerGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Option 3" />
    </RadioGroup>
    <Button
        android:id="@+id/nextQuestion"
        style = "@style/buttonGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/nextQuestion"
        android:onClick="goNext"/>

</LinearLayout>