<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pictures_Activity">
    <TextView
        style = "@style/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/picturesLink"/>
    <TextView
        android:id="@+id/currentScore"
        style = "@style/labelGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/currentScore"/>
    <TextView
        android:id="@+id/questionLabel"
        style = "@style/labelGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/questionLabel" />
    <TextView
        android:id="@+id/currentQuestion"
        style = "@style/labelQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="2">
        <ImageView
            android:id="@+id/image1"
            android:layout_width="170sp"
            android:layout_height="90sp"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="true"
            android:onClick="selectImage"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="10sp"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="170sp"
            android:layout_height="90sp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginBottom="10sp"
            android:clickable="true"
            android:onClick="selectImage" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="170sp"
            android:layout_height="90sp"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="true"
            android:onClick="selectImage"
            android:layout_marginRight="10sp" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="170sp"
            android:layout_height="90sp"
            android:layout_row="1"
            android:layout_column="1"
            android:clickable="true"
            android:onClick="selectImage" />

    </GridLayout>

    <Button
        android:id="@+id/nextQuestion"
        style = "@style/buttonGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/nextQuestion"
        android:onClick="goNext"/>

</LinearLayout>